Eng Skill Input Contract - complete but tuning needed