@@ -4,6 +4,7 @@ import com.lokiscale.bifrost.core.BifrostSession;
 
 import java.lang.reflect.Array;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -16,19 +17,19 @@ public interface RefResolver {
         Map<String, Object> resolved = new LinkedHashMap<>();
         Map<String, Object> safeArguments = arguments == null ? Map.of() : arguments;
         safeArguments.forEach((key, value) -> resolved.put(key, resolveValue(value, session)));
-        return Map.copyOf(resolved);
+        return Collections.unmodifiableMap(resolved);
     }
 
     private Object resolveValue(Object value, BifrostSession session) {
         if (value instanceof Map<?, ?> nestedMap) {
             Map<Object, Object> resolvedMap = new LinkedHashMap<>();
             nestedMap.forEach((key, nestedValue) -> resolvedMap.put(key, resolveValue(nestedValue, session)));
-            return Map.copyOf(resolvedMap);
+            return Collections.unmodifiableMap(resolvedMap);
         }
         if (value instanceof List<?> nestedList) {
             List<Object> resolvedList = new ArrayList<>(nestedList.size());
             nestedList.forEach(item -> resolvedList.add(resolveValue(item, session)));
-            return List.copyOf(resolvedList);
+            return Collections.unmodifiableList(resolvedList);
         }
         if (value != null && value.getClass().isArray()) {
             int length = Array.getLength(value);
@@ -36,7 +37,7 @@ public interface RefResolver {
             for (int index = 0; index < length; index++) {
                 resolvedValues.add(resolveValue(Array.get(value, index), session));
             }
-            return List.copyOf(resolvedValues);
+            return Collections.unmodifiableList(resolvedValues);
         }
         return resolveArgument(value, session);
     }
